syntax = "proto3";

option go_package = "./currency";

import "google/rpc/status.proto";

// Currency service in order to convert currency
service Currency {
    // method to get rate between two currencies
    rpc GetRate(RateRequest) returns (RateResponse);

    // streaming method to get continueous rate data
    rpc SubscribeRates(stream RateRequest) returns (stream StreamingRateResponse);
}


// Request model message for currency conversion
message RateRequest {
    // Base currencies that has to be converted into destination
    Currencies Base = 1;
    // Destination currency
    Currencies Destination = 2;
}

// Response of GetRate method after currency conversion
message RateResponse {
    // Base currencies that has to be converted into destination
    Currencies Base = 1;
    // Destination currency
    Currencies Destination = 2;
    // the resulting rate
    double Rate = 3;
}

message StreamingRateResponse {
    // response for bidirenctional streaming of data
    oneof response {
        RateResponse rate_response = 1;
        google.rpc.Status error = 2;
    }
}

// list of currencies
enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
}
